# cse390-hw3

./: .gitignore  README.md  bonus.txt
A3/: CMakeLists.txt  i hate linux
A3/Algo_170154879_113332225_A/: Algo_170154879_113332225_A.cpp  CMakeLists.txt  MyAlgorithm.cpp
A3/Algo_170154879_113332225_A/include/: Algo_170154879_113332225_A.h  MyAlgorithm.h
A3/Algo_170154879_113332225_B/: Algo_170154879_113332225_B.cpp  Algo_987654321.cpp  CMakeLists.txt
A3/Algo_170154879_113332225_B/include/: Algo_170154879_113332225_B.h  Algo_987654321.h  Algo_Helpers.h  Node.h  Position.h
A3/AlgorithmCommon/: AlgorithmRegistration.h  CMakeLists.txt  MyAlgorithm.cpp  MyAlgorithm.h  Node.h
A3/AlgorithmCommon/include/: MyAlgorithm.h  Node.h
A3/Algorithm_1_123456789/: Algo_123456789.cpp  CMakeLists.txt  Position.h
A3/Algorithm_1_123456789/include/: Algo_123456789.h
A3/Algorithm_2_123456789/: CMakeLists.txt
A3/Common/: AbstractAlgorithm.h  AlgorithmRegistrar.h  BatteryMeter.h  DirtSensor.h  Symbols.h  WallsSensor.h  common_types.h
A3/Simulation/: AlgorithmRegistrar.cpp  CMakeLists.txt  Simulator.cpp  Simulator.h  main.cpp
A3/Simulation/include/: Simulator.h
A3/examples/: badhouse.house  blocked_room.txt  blocked_room_out.txt  empty_house.house  empty_house_out.txt  few_steps.house  few_steps_out.txt  hallway.txt  hallway_out.txt  lowbattery.house  nearly_empty.txt  nearly_empty_out.txt  onlydock.house  tc10.house  tc9.house
